new section and foto

--- a/index.html
+++ b/index.html
@@ -90,6 +90,19 @@
             </div>
         </section>
 
+        <section class="section-four">
+            <h2 class="section-four-title">Customers</h2>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+
+        </section>
+
     </main>
 
     <footer class="footer">
