section-one icons

--- a/index.html
+++ b/index.html
@@ -47,19 +47,23 @@
             <div class="section-one-container">
             <ul class="section-one-list list">
                 <li class="section-one-item">
+                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/spriteicons.svg#icon-radar"></svg></div>
                     <h3 class="section-one-title">Strategy</h3>
                     <p class="section-one-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li class="section-one-item">
+                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/spriteicons.svg#icon-clock"></svg></div>
                     <h3 class="section-one-title">Punctuality</h3>
                     <p class="section-one-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="section-one-item">
+                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/spriteicons.svg#icon-notebook"></svg></div>
                     <h3 class="section-one-title">Diligence</h3>
                     <p class="section-one-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="section-one-item">
+                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/spriteicons.svg#icon-spaceman"></svg></div>
                     <h3 class="section-one-title">Technologies</h3>
                     <p class="section-one-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
