--- a/index.html
+++ b/index.html
@@ -86,7 +86,38 @@
             <div class="section-three-container">
             <h2 class="section-three-title">Our Team</h2>
             <ul class="list">
-                <li class="section-three-member"><img width="264" height="260" src="./images/mark_guerrero.jpg" alt="mark_guerrero"><div class="member-text"><h3 class="member-title">Mark Guerrero</h3><p>Product Designer</p></div></li>
+                <li class="section-three-member"><img width="264" height="260" src="./images/mark_guerrero.jpg" alt="mark_guerrero"><div class="member-text"><h3 class="member-title">Mark Guerrero</h3><p>Product Designer</p></div>
+                        <ul class="section-three-social">
+                            <li>
+                                <a href="#" class="section-three-icons">
+                                    <svg class="section-three-icon">
+                                        <use href="./images/spriteicons-social.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="section-three-icons">
+                                    <svg class="section-three-icon">
+                                        <use href="./images/spriteicons-social.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="section-three-icons">
+                                    <svg class="section-three-icon">
+                                        <use href="./images/spriteicons-social.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="section-three-icons">
+                                    <svg class="section-three-icon">
+                                        <use href="./images/spriteicons-social.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                    </ul>
+                </li>
                 <li class="section-three-member"><img width="264" height="260" src="./images/tom_ford.jpg" alt="images/tom_ford"><div class="member-text"><h3 class="member-title">Tom Ford</h3><p>Frontend Developer</p></div></li>
                 <li class="section-three-member"><img width="264" height="260" src="./images/camila_garcia.jpg" alt="camila_garcia"><div class="member-text"><h3 class="member-title">Camila Garcia</h3><p>Marketing</p></div></li>
                 <li class="section-three-member"><img width="264" height="260" src="./images/daniel_wilson.jpg" alt="daniel_wilson"><div class="member-text"><h3 class="member-title">Daniel Wilson</h3><p>UI Designer</p></div></li>
