--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
             <div class="section-one-container">
             <ul class="section-one-list list">
                 <li class="section-one-item">
-                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/spriteicons.svg#icon-radar"></svg></div>
+                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/"></svg></div>
                     <h3 class="section-one-title">Strategy</h3>
                     <p class="section-one-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li class="section-one-item">
-                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/spriteicons.svg#icon-clock"></svg></div>
+                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/"></svg></div>
                     <h3 class="section-one-title">Punctuality</h3>
                     <p class="section-one-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="section-one-item">
-                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/spriteicons.svg#icon-notebook"></svg></div>
+                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/"></svg></div>
                     <h3 class="section-one-title">Diligence</h3>
                     <p class="section-one-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="section-one-item">
-                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/spriteicons.svg#icon-spaceman"></svg></div>
+                    <div class="section-one-icons"><svg class="section-one-icon"><use href="/images/"></svg></div>
                     <h3 class="section-one-title">Technologies</h3>
                     <p class="section-one-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -91,36 +91,130 @@
                             <li>
                                 <a href="#" class="section-three-icons">
                                     <svg class="section-three-icon">
-                                        <use href="./images/spriteicons-social.svg#icon-instagram"></use>
+                                        <use href="./images/"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="section-three-icons">
                                     <svg class="section-three-icon">
-                                        <use href="./images/spriteicons-social.svg#icon-instagram"></use>
+                                        <use href="./images/"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="section-three-icons">
                                     <svg class="section-three-icon">
-                                        <use href="./images/spriteicons-social.svg#icon-instagram"></use>
+                                        <use href="./images/"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="section-three-icons">
                                     <svg class="section-three-icon">
-                                        <use href="./images/spriteicons-social.svg#icon-instagram"></use>
+                                        <use href="./images/"></use>
                                     </svg>
                                 </a>
                             </li>
+                        </ul>
+                </li>
+                <li class="section-three-member"><img width="264" height="260" src="./images/tom_ford.jpg" alt="images/tom_ford"><div class="member-text"><h3 class="member-title">Tom Ford</h3><p>Frontend Developer</p></div>
+                    <ul class="section-three-social">
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
                 </li>
-                <li class="section-three-member"><img width="264" height="260" src="./images/tom_ford.jpg" alt="images/tom_ford"><div class="member-text"><h3 class="member-title">Tom Ford</h3><p>Frontend Developer</p></div></li>
-                <li class="section-three-member"><img width="264" height="260" src="./images/camila_garcia.jpg" alt="camila_garcia"><div class="member-text"><h3 class="member-title">Camila Garcia</h3><p>Marketing</p></div></li>
-                <li class="section-three-member"><img width="264" height="260" src="./images/daniel_wilson.jpg" alt="daniel_wilson"><div class="member-text"><h3 class="member-title">Daniel Wilson</h3><p>UI Designer</p></div></li>
+
+                <li class="section-three-member"><img width="264" height="260" src="./images/camila_garcia.jpg" alt="camila_garcia"><div class="member-text"><h3 class="member-title">Camila Garcia</h3><p>Marketing</p></div>
+                    <ul class="section-three-social">
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="section-three-member"><img width="264" height="260" src="./images/daniel_wilson.jpg" alt="daniel_wilson"><div class="member-text"><h3 class="member-title">Daniel Wilson</h3><p>UI Designer</p></div>
+                    <ul class="section-three-social">
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="section-three-icons">
+                                <svg class="section-three-icon">
+                                    <use href="./images/"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
             </div>
         </section>
