--- a/index.html
+++ b/index.html
@@ -220,16 +220,53 @@
         </section>
 
         <section class="section-four">
-            <h2 class="section-four-title">Customers</h2>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-
+            <div class="section-four-container">
+                <h2 class="section-four-title">Customers</h2>
+                <ul class="customers-list">
+                    <li class="customer-item">
+                        <a href="#" class="customers-icons">
+                            <svg class="customers-icon">
+                                <use href="./images/spriteicons.svg#icon-client-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-item">
+                        <a href="#" class="customers-icons">
+                            <svg class="customers-icon">
+                                <use href="./images/spriteicons.svg#icon-client-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-item">
+                        <a href="#" class="customers-icons">
+                            <svg class="customers-icon">
+                                <use href="./images/spriteicons.svg#icon-client-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-item">
+                        <a href="#" class="customers-icons">
+                            <svg class="customers-icon">
+                                <use href="./images/spriteicons.svg#icon-client-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-item">
+                        <a href="#" class="customers-icons">
+                            <svg class="customers-icon">
+                                <use href="./images/spriteicons.svg#icon-client-5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customer-item">
+                        <a href="#" class="customers-icons">
+                            <svg class="customers-icon">
+                                <use href="./images/spriteicons.svg#icon-client-6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
 
     </main>
