--- a/index.html
+++ b/index.html
@@ -273,8 +273,44 @@
 
     <footer class="footer">
         <div class="footer-container">
-        <a href="./index.html" class="footer-logo"><span class="web-logo">WEB</span>STUDIO</a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <div class="footer-logo-container">
+            <a href="./index.html" class="footer-logo"><span class="web-logo">WEB</span>STUDIO</a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
+            <div class="footer-social">
+                <h2 class="social-title">Social media</h2>
+                <ul class="footer-media-list">
+                    <li class="footer-item">
+                        <a href="#" class="footer-icons">
+                            <svg class="footer-icon">
+                                <use href="./images/spriteicons.svg#icon-instagram-footer"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="#" class="footer-icons">
+                            <svg class="footer-icon">
+                                <use href="./images/spriteicons.svg#icon-twitter-footer"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="#" class="footer-icons">
+                            <svg class="footer-icon">
+                                <use href="./images/spriteicons.svg#icon-facebook-footer"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-item">
+                        <a href="#" class="footer-icons">
+                            <svg class="footer-icon">
+                                <use href="./images/spriteicons.svg#icon-linkedin-footer"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
         </div>
     </footer>
 </body>
